Bug 302645 - Desktop menu (Cashew) not moved properly when widgets are locked and screen is resized
Summary: Desktop menu (Cashew) not moved properly when widgets are locked and screen i...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: containment-desktop (other bugs)
Version First Reported In: 4.8.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-27 15:34 UTC by Ralf Jung
Modified: 2012-09-27 11:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
A screenshot demonstrating the problem (189.17 KB, image/png)
2012-06-28 19:03 UTC, Ralf Jung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2012-06-27 15:34:55 UTC
I have the cashew to open the desktop menu sitting in the top-right corner of my screen. When I now switch to an external monitor with widgets being locked, disabling the internal one of my laptop, the Cashew stays at its absolute position and it keeps this quarter-circle form, but since the external screen is much larger than the internal one, it now sits in the middle of the screen.
Even worse, when I move the cashew to the top-right corner, lock widgets, and decrease the screen size, the Cashew ends up being outside of the visible area.

Reproducible: Always

Steps to Reproduce:
1. Move the Cashew to the top-right
2. Lock widgets
3. Resize the screen (or switch to an external one)

Actual Results:  
The cashew ends up in its quarter-circle form either in the middle of the screen, or outside the visible area.

Expected Results:  
It should behave like in non-locked mode (i.e., stick to the top-right corner).

If for some reason this is undesired, it should at least *never* be outside the visible area, and it should switch the the rectangle from it usually takes when not being in an edge. Currently it looks like a visual glitch.
Comment 1 Marco Martin 2012-06-28 08:39:59 UTC
screenshot?
Comment 2 Ralf Jung 2012-06-28 19:03:08 UTC
Created attachment 72202 [details]
A screenshot demonstrating the problem

This is how the cashew looks like after increasing the screen size with widgets being locked.
For the decrease, there is not much to show - the cashew is just entirely gone as it is outside of the visible area.
Comment 3 Ralf Jung 2012-09-27 11:44:48 UTC
Git commit 4807dd73732b15913c421d28f68581fe46ffa3f4 by Ralf Jung.
Committed on 16/09/2012 at 22:21.
Pushed by ralfjung into branch 'KDE/4.9'.

fix repositioning the toolbox when the widgets are locked

REVIEW: 106457
FIXED-IN: 4.9.2

M  +3    -0    plasma/desktop/toolboxes/internaltoolbox.cpp

http://commits.kde.org/kde-workspace/4807dd73732b15913c421d28f68581fe46ffa3f4
Comment 4 Ralf Jung 2012-09-27 11:45:36 UTC
Git commit 6da7309327b927b9598fd9ce15dadbc43f5f052b by Ralf Jung.
Committed on 16/09/2012 at 22:21.
Pushed by ralfjung into branch 'master'.

fix repositioning the toolbox when the widgets are locked

REVIEW: 106457
FIXED-IN: 4.9.2

M  +3    -0    plasma/desktop/toolboxes/internaltoolbox.cpp

http://commits.kde.org/kde-workspace/6da7309327b927b9598fd9ce15dadbc43f5f052b