fix repositioning the toolbox when the widgets are locked

REVIEW: 106457
BUG: 302645
FIXED-IN: 4.9.2